fixes: breadcrumbs, h1 on small resolutions; product cart btn, wishlist btn on small resolution

--- a/upload/catalog/view/src/scss/components-chipoteka/_product-cpta.scss
+++ b/upload/catalog/view/src/scss/components-chipoteka/_product-cpta.scss
@@ -13,6 +13,11 @@
         @include font-size(2.5rem);
         margin-bottom: 0.5rem;
         color: $dark;
+
+        @media screen and (max-width: 350px){
+            text-align: left;
+        }
+        
     }
 
 
@@ -28,6 +33,11 @@
                 font-size: 1.25rem;
                 font-weight: 300;
                 padding: 1rem 1.5rem;
+
+                @media screen and (max-width: 370px){
+                    padding-left: 0.9rem;
+                    padding-right: 0.9rem;
+                }
             }
         }
 
@@ -230,20 +240,40 @@
 
             
             @include media-breakpoint-down(sm) { // @media screen and (max-width: 441px)
-                flex-direction: column;
+                // flex-direction: column;
                 align-items: flex-start;
+                flex-wrap: wrap;
 
                 .quantity {
                     width: 100%;
     
                     .input-quantity {
                         max-width: unset;
+                        margin-right: 0 !important;
                     }
                 }
+ 
+                // [id*="button-cart"] {
+                //     max-width: unset;
+                // } 
 
                 [id*="button-cart"] {
-                    max-width: unset;
-                } 
+                     flex: 4;
+                     z-index: 1;
+                     max-width: 100%;
+                }
+
+                .btn-wishlist-v2 {
+                     flex: 1;
+                     z-index: 0;
+                }
+            }
+
+
+            @media screen and (max-width: 305px) {
+                [id*="button-cart"] {
+                     margin-left: 1rem;
+                }
             }
 
 
